added code to the HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,49 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The Metadata is data about our webpage that the browser uses to effectively serve our webpage to users. Metadata is typically not seen by users, but it contains important information about accessibility, search engines, and performance.</li>
+          <li>The title element defines the title for a webpage. This element is required and is extremely important for Search Engine Oprimization or SEO</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The sytle element defines the CSS styles associated with a website.</li>
+          <li>The base element defines the base URL for a webpage.</li>
+          <li>The link element connects an external resource to the HTML document.</li>
+          <li>The meta element defines metadata such as the character set, description, keywords, author and viewport.</li>
+          <li>The script element embeds client-side scripts in the HTML document.</li>
+          <li>The body element defines the body of the document, which contains the content that is visivle to the user. All fo the content that we want to display to users must be inside the body element.</li>
+          <li>The words “element” and “tag” are commonly used interchangeably in the web development world, but it is important to know the difference. An element refers to the entire element from opening tag to closing tag, whereas a tag refers only to what appears inside the angle brackets.</li>
+          <li>the header element are prominent titles and subtitles to organize a page.</li>
+          <li>the P element represents a paragraph of block of text.</li>
+          <li>the li element is used to represent lists, ul for unordered and ol for bulleted lists.</li>
+          <li>The img element contains information about images that are displayed on the webpage. the img element can contain various attributes; the src attribute is the most important because it defines the location of the image.</li>
+          <li>the br element creates a line of empty space. it is also called a line break and it is used to create a space between two blocks of content.</li>
+          <li>the "a" element stands for anchor. it creates links to the same webpage or other webpages.</li>
+          <li>the href attribute points to the URL for the link</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+   
+      </section>
+   
+      <section class="card" id="git-section">
+         <h2>Git</h2>
+         <ul>
+           <li> git status: checks what branch we are currently on</li>
+           <li> git checkout -b branch-name" creates a new branch and switches to it</li>
+           <li> git add -A: this command adds modifications in the current working branch of the staging area. the -A flag indicates that we want to add all changes. the staging area infomrs Git that the changes will be added in the next commit.</li>
+           <li> git commit -m: this commits the staged changes and updates the starter code.</li>
+           <li> git pull origin: the pull command to receive a branch's modifications into the local enviroment. It is important to always do a git pull to make sure that you have the latest version of the project on your local computer before you start to work. Otherwise you might be working on outdated code.</li>
+           <li> git push origin: use the pull command to receive a branchs modifications into the the local enviroment.</li> 
+         </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+   
+      </section>
     </main>
 
     <footer>
