--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
       </section>
    
       <section class="card" id="css-section">
-   
+        <h2>CSS</h2>
+        <ul></ul>
       </section>
-   
+
       <section class="card" id="git-section">
          <h2>Git</h2>
          <ul>
