added CSS to project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <header id="top">
@@ -38,7 +39,16 @@
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
-        <ul></ul>
+         <ul> 
+          <li>the link element is needed to create the connection to the external file.</li>
+          <li>the rel attribute specifies the realtionship between the current document ahte linked dcoument resource.</li>
+          <li>the href attribute specifies the location of the external resource. it can be relative (its from the current location) or absolute (normally an external link).</li>
+          <li>adding a period to the card will give the properties to the assigned class.</li>
+          <li>you can add multiple effects separating them by commas.</li>
+          <li>you can add colors by name or using its hexadecimal value.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+         </ul>
       </section>
 
       <section class="card" id="git-section">
@@ -54,7 +64,10 @@
       </section>
    
       <section class="card" id="javascript-section">
-   
+          <h2>JavaScript</h2>
+          <ul>
+            <li>this will be filled with info about javascript</li>
+          </ul>
       </section>
     </main>
 
