--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -66,7 +67,9 @@
       <section class="card" id="javascript-section">
           <h2>JavaScript</h2>
           <ul>
-            <li>this will be filled with info about javascript</li>
+            <li>The Coding order is important for the outcome in JS, this is called CONTROL FLOW.</li>
+            <li>An array is a single variable that is used to hold a group of data. it is typically used to hold data that is related in some way.</li>
+            <li></li>
           </ul>
       </section>
     </main>
@@ -74,5 +77,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
