added JS work, this needs further study.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <ul>
             <li>The Coding order is important for the outcome in JS, this is called CONTROL FLOW.</li>
             <li>An array is a single variable that is used to hold a group of data. it is typically used to hold data that is related in some way.</li>
-            <li></li>
+            <li>code for JS is always written inside curly brackets.</li>
           </ul>
       </section>
     </main>
